scrollbar fixes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -657,6 +657,9 @@ select {
 .relative {
   position: relative;
 }
+.sticky {
+  position: sticky;
+}
 .-left-3 {
   left: -0.75rem;
 }
@@ -692,9 +695,6 @@ select {
 }
 .z-30 {
   z-index: 30;
-}
-.col-span-3 {
-  grid-column: span 3 / span 3;
 }
 .my-auto {
   margin-top: auto;
@@ -772,17 +772,17 @@ select {
 .h-8 {
   height: 2rem;
 }
-.h-\[calc\(100vh-7rem\)\] {
-  height: calc(100vh - 7rem);
+.h-\[calc\(100dvh-174px\)\] {
+  height: calc(100dvh - 174px);
 }
-.h-full {
-  height: 100%;
-}
-.h-\[calc\(100dvh-7rem\)\] {
-  height: calc(100dvh - 7rem);
+.h-\[calc\(100dvh-304px\)\] {
+  height: calc(100dvh - 304px);
 }
 .h-\[calc\(100dvh-8rem\)\] {
   height: calc(100dvh - 8rem);
+}
+.h-full {
+  height: 100%;
 }
 .min-h-0 {
   min-height: 0px;
@@ -816,10 +816,6 @@ select {
 }
 .w-auto {
   width: auto;
-}
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
 }
 .w-full {
   width: 100%;
@@ -860,20 +856,14 @@ select {
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .flex-col {
   flex-direction: column;
-}
-.flex-wrap {
-  flex-wrap: wrap;
 }
 .flex-nowrap {
   flex-wrap: nowrap;
@@ -950,6 +940,9 @@ select {
 }
 .overflow-x-hidden {
   overflow-x: hidden;
+}
+.overflow-y-hidden {
+  overflow-y: hidden;
 }
 .truncate {
   overflow: hidden;
@@ -1154,13 +1147,13 @@ select {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 .pb-4 {
   padding-bottom: 1rem;
@@ -1353,19 +1346,32 @@ select {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.scrollbar-hide::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
 	background-color: transparent;
 }
-.scrollbar-hide::-webkit-scrollbar-thumb {
-	background-color: rgb(109 40 217);
+::-webkit-scrollbar-track:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
-.scrollbar-hide {
+::-webkit-scrollbar-thumb {
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(167 139 250 / var(--tw-bg-opacity));
+}
+::-webkit-scrollbar-thumb:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(109 40 217 / var(--tw-bg-opacity));
+}
+::-webkit-scrollbar {
+	width: 4px;
+  height: 4px;
+}
+/* ::-webkit-scrollbar:hover{
+  width: 4px;
+} */
+/* .scrollbar-hide {
 	scrollbar-width: auto;
-}
-.scrollbar-hide::-webkit-scrollbar {
-	width: 1px;
-	height: 2px;
-}
+} */
 /*.scrollbar-hide::-webkit-scrollbar {
    display: none; 
 } */
@@ -1376,6 +1382,12 @@ select {
 /* scrollbar-width: none;   */
 /* Firefox */
 /*}*/
+.hover\:overflow-auto:hover {
+  overflow: auto;
+}
+.hover\:overflow-y-auto:hover {
+  overflow-y: auto;
+}
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1639,12 +1651,12 @@ select {
     align-items: center;
   }
 
-  .md\:gap-5 {
-    gap: 1.25rem;
-  }
-
   .md\:gap-0 {
     gap: 0px;
+  }
+
+  .md\:gap-5 {
+    gap: 1.25rem;
   }
 
   .md\:space-x-3 > :not([hidden]) ~ :not([hidden]) {
@@ -1684,9 +1696,9 @@ select {
     background-color: rgb(249 250 251 / var(--tw-bg-opacity));
   }
 
-  .md\:px-16 {
-    padding-left: 4rem;
-    padding-right: 4rem;
+  .md\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .md\:px-5 {
@@ -1699,11 +1711,6 @@ select {
     padding-bottom: 1.25rem;
   }
 
-  .md\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
   .md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -1711,12 +1718,12 @@ select {
 }
 @media (min-width: 1024px) {
 
-  .lg\:col-span-3 {
-    grid-column: span 3 / span 3;
-  }
-
   .lg\:col-span-2 {
     grid-column: span 2 / span 2;
+  }
+
+  .lg\:col-span-3 {
+    grid-column: span 3 / span 3;
   }
 
   .lg\:flex {
@@ -1757,21 +1764,16 @@ select {
 }
 @media (min-width: 1280px) {
 
-  .xl\:col-span-3 {
-    grid-column: span 3 / span 3;
-  }
-
   .xl\:col-span-1 {
     grid-column: span 1 / span 1;
   }
 
-  .xl\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+  .xl\:col-span-3 {
+    grid-column: span 3 / span 3;
   }
 
-  .xl\:px-16 {
-    padding-left: 4rem;
-    padding-right: 4rem;
+  .xl\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
 @media (min-width: 1536px) {
